[tool.poetry]
name = "aoc2022"
version = "0.1.0"
description = ""
authors = ["Phil Roth"]
readme = "README.md"
packages = [{include = "aoc2022", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.5"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^22.10.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
